- fixed overflow

--- a/blocks/property-search-bar/property-search-bar.css
+++ b/blocks/property-search-bar/property-search-bar.css
@@ -1,3 +1,16 @@
+html, body {
+    position: relative;
+}
+.overlay {
+    position: fixed;
+    overflow-y: auto;
+    top: 115px;
+    left: 0;
+    width: 100vw;
+    height: calc(100% - 64px - var(--nav-height));
+    background-color:  var(--white);
+    z-index: 999;
+}
 main .section.property-search-bar-container {
     max-width: 100vw;
     padding: 0;
@@ -96,6 +109,7 @@ main .section.property-search-bar-container {
     background-color: var(--white);
     height: 64px;
     margin: 0;
+    z-index: 1000;
 }
 
 .filter-buttons .btn {
